2013-12-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_gis.php: Disable more controls
	from the google maps in GIS to fix arrows controls

2013-12-16  Sergio Martin <sergio.martin@artica.es>

	* include/functions_gis.php
	include/javascript/openlayers.pandora.js
	include/styles/pandora.css: Remove our zoom in google maps
	on GIS view to use googles one. Incident #448

2013-12-13  Sergio Martin <sergio.martin@artica.es>

	* mobile/operation/events.php, mobile/operation/modules.php,
	mobile/operation/agents.php: fixed the scroll of list for old
	browser in android mobiles devices.

2013-12-13  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js: Fixed wrong
	condition of minimum height of menu.
	Incident #417

2013-12-13  Sergio Martin <sergio.martin@artica.es>

	* include/javascript/pandora.js: Added auto scroll
	and resizable attributes to module graphs pop up
	to improve usability with zoomed graphs.
	Incident: #417

2013-12-12  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/functions_flot.php
	include/graphs/flot/pandora.flot.js
	include/javascript/pandora.js
	include/styles/pandora.css
	operation/agentes/stat_win.php: A lot of fixes on the
	javascript graphs to be shown correctly in IE. Tested
	and working fine on IE9 with compatibility mode on.
	Incident: #417

2013-12-11  Sergio Martin <sergio.martin@artica.es>

	* include/graphs/flot/pandora.flot.js: Add one decimal
	to pie graphs to don't lose so much precision when 
	percentages are rounded
	Incident #407

2013-12-10  Dario Rodriguez <dario@artica.es>

	* mobile/operation/modules.php,
	mobile/include/style/main.css: Fixed some style bugs
	related to layout on visual console.

2013-12-10  Sergio Martin <sergio.martin@artica.es>

	* include/functions_events.php: Fix storing of event 
	comments in metaconsole and shot the event comments more
	recent first. 
	Incident #440

2013-12-09  Sergio Martin <sergio.martin@artica.es>
